# sam-template-plugin

./: .directory  .gitignore  Makefile  README.md  cookiecutter.json
{{cookiecutter.plugin_name}}/: .bumpversion.cfg  .gitignore  .isort.cfg  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py
{{cookiecutter.plugin_name}}/makeutils/: functions.mk
{{cookiecutter.plugin_name}}/tests/: conftest.py  test_cli.py
{{cookiecutter.plugin_name}}/{{cookiecutter.plugin_name}}/: __init__.py  __main__.py  testtrace.csv  {{cookiecutter.plugin_name}}.json  {{cookiecutter.plugin_name}}.py
{{cookiecutter.plugin_name}}/{{cookiecutter.plugin_name}}/tests/: test_utils.py
{{cookiecutter.plugin_name}}/{{cookiecutter.plugin_name}}/ui/: __init__.py  mkpyqt.py  ui.py  viewsList.json  {{cookiecutter.plugin_name}}.ui
