[tool.poetry]

name = "{{cookiecutter.plugin_name}}"
version = "0.0"
description = "{{cookiecutter.project_short_description}}"

license = "MIT"

authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

readme = "README.md"

homepage = "https://pypi.org/project/{{cookiecutter.plugin_name}}"
documentation = "https://{{cookiecutter.plugin_name}}.readthedocs.io"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo}}"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}",
]

[[tool.poetry.source]]
name = "dilbert"
url = "http://dilbert.inti.gob.ar/pypiserver/simple/"

[tool.poetry.dependencies]

python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"
plugins = "*"
PyQt5 = "^5"
click = "^6.0"
minilog = "~0.4"
sam_gui = "*"
# TODO: add your library's requirements

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.3b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^4.3.1"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"
pydoc-markdown = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

{{cookiecutter.plugin_name}} = "{{cookiecutter.plugin_name}}.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
