[tool.poetry]

name = "{{cookiecutter.plugin_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_short_description}}"

license = "MIT"

authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

readme = "README.md"

homepage = "https://pypi.org/project/{{cookiecutter.plugin_name}}"
documentation = "https://{{cookiecutter.plugin_name}}.readthedocs.io"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo}}"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}",
]

[[tool.poetry.source]]
name = "dilbert"
url = "http://dilbert.inti.gob.ar/pypiserver/simple/"

[tool.poetry.dependencies]

python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"
plugins = "*"
PyQt5 = "^5"
click = "^6.0"
minilog = "~0.4"
samgui = "*"
commonutils = ">=1.0.6"
# TODO: add your library's requirements

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.10b0"  # The uncompromising Python code formatter
isort = "=4.3.21"   # A Python utility / library to sort imports

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^4.3.1"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"        # a mocking library for datetime

# Reports
coveragespace = "*"

# Documentation
sphinx = "*"
pygments = "*"
doc8 = "*"
recommonmark = "*"
m2r = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
pyinotify = "*"
bump2version = "*"

[tool.poetry.scripts]

{{cookiecutter.plugin_name}} = "{{cookiecutter.plugin_name}}.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
